--- a/web/src/app/common/common.component.html
+++ b/web/src/app/common/common.component.html
@@ -1,6 +1,6 @@
 <body>
   <div class="navbar">
-    <!-- responsive navbar toggle button -->
+<!-- responsive navbar toggle button -->
     <input type="checkbox" id="nav-check">
     <div class="nav-btn">
       <label for="nav-check">
@@ -9,9 +9,9 @@
         <span></span>
       </label>
     </div>
-    <!-- Navbar items -->
+<!-- Navbar items -->
     <div class="nav-links">
-      <!-- SuperAdmin nav -->
+<!-- SuperAdmin nav -->
       <a *ngIf="user?.data?.UserGroup === 'SuperAdmin'" [routerLink]="['/admin/adminDashborad']">Dashborad</a>
       <div *ngIf="user?.data?.UserGroup === 'SuperAdmin'" class="dropdown">
         <a class="dropBtn" data-target="#collapseExample">Administration <i class="fa fa-caret-down" aria-hidden="true"></i></a>
@@ -35,16 +35,15 @@
         </div>
 
       </div>
-      
-      <!-- SuperAdmin end nav-->
+<!-- SuperAdmin end nav-->
 
-      <!-- CompanyAdmin nav-->
-      <a *ngIf="user.data.UserGroup !== 'SuperAdmin'" [routerLink]="['/admin/CompanyDashborad']">Dashborad</a>
+<!-- CompanyAdmin start nav-->
+      <a *ngIf="user?.data?.UserGroup !== 'SuperAdmin'" [routerLink]="['/admin/CompanyDashborad']">Dashborad</a>
       <div *ngIf="user?.data?.UserGroup !== 'SuperAdmin'" class="dropdown">
         <a class="dropBtn" data-target="#collapseExample">Administration <i class="fa fa-caret-down" aria-hidden="true"></i> </a>
 
         <div class="drop-content" id="collapseExample">
-          <a href="javascript:void(0)" [routerLink]="['/admin/company',user.data.CompanyID]" id="collapseExample">Company Info</a>
+          <a href="javascript:void(0)" [routerLink]="['/admin/company',user?.data?.CompanyID]" id="collapseExample">Company Info</a>
           <a href="javascript:void(0)" [routerLink]="['/admin/employeeList']"                   id="collapseExample">Employee</a>
           <a href="javascript:void(0)" [routerLink]="['/admin/shopList']"                       id="collapseExample">Shop</a>
           <a href="javascript:void(0)" [routerLink]="['/admin/rolePermission']"                       id="collapseExample">Role-Permission</a>
@@ -86,20 +85,20 @@
         </div>
 
       </div>
-
     </div>
-   
+ <!-- CompanyAdmin end nav-->
+
+<!-- SuperAdmin login btn -->
     <a  *ngIf="user?.data?.UserGroup == 'SuperAdmin' " class="logoutBtn" (click)="logout()" title="LogOut">
       <i class="fa-solid fa-right-from-bracket"></i>
     </a>
+<!-- SuperAdmin login btn -->
 
-    <a  *ngIf="user?.data?.UserGroup == 'Employee' " class="logoutBtn" (click)="logout()" title="LogOut">
-      <i class="fa-solid fa-right-from-bracket"></i>
-    </a>
-   
+ <!-- companyAdmin or employee login btn -->
     <a  *ngIf="user?.data?.UserGroup != 'SuperAdmin' " class="logoutBtn" (click)="logout()" title="LogOut">
       <i class="fa-solid fa-right-from-bracket"></i>
     </a>
+<!-- companyAdmin or employee login btn -->
   </div>
 </body>
 <router-outlet></router-outlet>
