--- a/web/src/app/admin/empolyee-list/empolyee-list.component.html
+++ b/web/src/app/admin/empolyee-list/empolyee-list.component.html
@@ -12,7 +12,7 @@
                   </h2>
                     
                 </div>
-                <div class="col-2">
+                <div *ngIf="term == ''" class="col-2">
                     <select class=" form-control"
                         style="width: auto; border-radius: 22px; font-size: 10px !important; border: 2px solid #c3c3c3; box-shadow: inset 2px 2px 10px #adaaaad4;"
                         [(ngModel)]="itemsPerPage" (change)="getList();">
@@ -24,7 +24,7 @@
                         <option [ngValue]="500">Show 500 Row</option>
                     </select>
                 </div>
-                <div class="col-3 mx-auto" style="margin-top:0px;">
+                <div *ngIf=" term == ''" class="col-3 mx-auto" style="margin-top:0px;">
                     <ngb-pagination style="margin: 0px 0 !important;" [ellipses]="false"
                         ngbPaginationEllipsis [collectionSize]="collectionSize" #numPages
                         [pageSize]="itemsPerPage" [(page)]="currentPage" (pageChange)="getList()"
@@ -32,9 +32,14 @@
                     </ngb-pagination>
                 </div>
                 <div class="col-2 ms-auto">
-                    <mat-icon class="col-white plus_icon" [routerLink]="['/admin/employee',0]"
-                        style="float: right;"> add</mat-icon>
+                        <div class="input-group">
+                            <input   placeholder="Search" [(ngModel)]="term" #searching  mdbInput type="search" id="form1" class="form-control" />
+                        </div>
                 </div>
+                <div class="col-1" style="width: 50px">
+                      <mat-icon  class="col-white plus_icon" [routerLink]="['/admin/employee',0]"
+                      style="float: right;"> add</mat-icon>
+          </div>
             </div>
              
             </div>
