--- a/web/src/app/inventory/purchase/purchase.component.html
+++ b/web/src/app/inventory/purchase/purchase.component.html
@@ -428,6 +428,31 @@
                                                 </tr>
                                             </thead>
                                             <tbody>
+                                                <tr *ngFor="let data of itemList ; let i = index;">
+                                                    <td class="text-center" *ngIf="data.Status === 1">
+                                                        <mat-checkbox [(ngModel)]="data.Checked" name="{{i + 'name'}}" [checked]="data.Checked" [ngModelOptions]="{standalone: true}" >
+                                                        </mat-checkbox>
+                                                    </td>
+                                                    <td class="text-center">
+                                                        <mat-icon *ngIf="data.Status !== 0" class="delete_icon ms-1">print</mat-icon>
+                                                        <mat-icon *ngIf="data.Status !== 0" class="delete_icon ms-1" >delete_forever</mat-icon>
+                                                    </td>
+                                                    <td class="text-center" [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }" class="text-center">{{data.BaseBarCode}}</td>
+                                                    <td class="text-center" [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }" class="text-center">{{data.UniqueBarcode}}</td>
+                                                    <td class="text-center" [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }" class="text-center">{{data.ProductName}}</td>
+                                                    <td class="text-center" [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }" class="text-center">{{data.UnitPrice }}</td>
+                                                    <td class="text-center" [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }" class="text-center">{{data.Quantity}}</td>
+                                                    <td class="text-center" [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }" class="text-center">{{data.SubTotal}}</td>
+                                                    <td class="text-center" [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }" class="text-center">{{data.GSTAmount}}</td>
+                                                    <td class="text-center" [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }" class="text-center">{{data.GSTPercentage}}%</td>
+                                                    <td class="text-center" [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }" class="text-center">{{data.GSTType}}</td>
+                                                    <td class="text-center" [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }" class="text-center">{{data.DiscountAmount}}</td>
+                                                    <td class="text-center" [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }" class="text-center">{{data.DiscountPercentage}}%</td>
+                                                    <td class="text-center" [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }" class="text-center">{{data.TotalAmount}}</td>
+                                                    <td class="text-center" [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }" class="text-center">{{data.RetailPrice}}</td>
+                                                    <td class="text-center" [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }" class="text-center">{{data.WholeSalePrice}}</td>
+                                                </tr>
+                                               
                                             </tbody>
                                         </table>
                                     </div>
