--- a/web/src/app/report/service-report/service-report.component.html
+++ b/web/src/app/report/service-report/service-report.component.html
@@ -7,7 +7,7 @@
                         <div class="header p-2 py-0 pt-1">
                             <div class="row">
                                 <div class="col-md-2 col-8 p-0 ms-3">
-                                    <h2>Service & Charge Report </h2>
+                                    <h2>Charge & Service Report </h2>
                                 </div>
                             </div>
                         </div>
@@ -113,9 +113,94 @@
                                     </div>
                                 </div>
                             </mat-tab>
-                            <!-- Purchase Charge-->
+                            <!-- Bill Service-->
                             <mat-tab label="Bill Service">
-
+                                <div class="body">
+                                    <form class="p-3 pb-0" #f="ngForm" >
+                                        <div class="row">
+                                            <div class="col-md-2">
+                                                <mat-form-field class="example-full-width mb-0">
+                                                    <mat-label>From Date</mat-label>
+                                                    <input matInput name="FromDate" type="date"
+                                                        [(ngModel)]="service.FromDate" #DOBcontrol />
+                                                </mat-form-field>
+                                            </div>
+                                            <div class="col-md-2">
+                                                <mat-form-field class="example-full-width mb-0">
+                                                    <mat-label>To Date</mat-label>
+                                                    <input matInput name="ToDate" type="date"
+                                                        [(ngModel)]="service.ToDate" />
+                                                </mat-form-field>
+                                            </div>
+                                            <div class="col-xl-2 col-lg-2 col-md-2 col-sm-2 mb-0 ">
+                                                <mat-form-field class="example-full-width mb-0">
+                                                    <mat-label>Shop Name</mat-label>
+                                                    <mat-select name="shopID" [(ngModel)]="service.ShopID" multiple>
+                                                        <mat-option [value]=0>All</mat-option>
+                                                        <mat-option [value]="s.ID" *ngFor="let s of shopList">
+                                                            {{s.Name}}
+                                                            <span [style.color]="'blue'"
+                                                                *ngIf="s.AreaName !== 'null'">({{s.AreaName}})</span>
+                                                        </mat-option>
+                                                    </mat-select>
+                                                </mat-form-field>
+                                            </div>
+                                            <div class="col-md-1">
+                                                <button class="ml-0" mat-raised-button
+                                                    color="primary"><mat-icon>search</mat-icon> Search</button>
+                                            </div>
+                                            <div class="col-md-1">
+                                                <button class="mr-0" type="button" mat-raised-button color="warn"
+                                                    (click)="f.reset()"><mat-icon>refresh</mat-icon> Reset</button>
+                                            </div>
+                                        </div>
+                                    </form>
+                                    <div class="body p-2">
+                                        <div class="col-sm-12" style="overflow: auto; height: 450px;">
+                                            <table class="table table-striped table-hover table-sm table-bordered"
+                                                style="border: 2px solid #fff !important;" id="purchaseChargeExcel">
+                                                <thead>
+                                                    <tr style="white-space: nowrap;">
+                                                        <th>S.No</th>
+                                                        <th>ShopName</th>
+                                                        <th>InvoiceNo</th>
+                                                        <th>Description</th>
+                                                        <th>Amount</th>
+                                                        <th>GST Type</th>
+                                                        <th>GST%</th>
+                                                        <th>GST Amount</th>
+                                                        <th>GrandTotal</th>
+                                                    </tr>
+                                                    <tr class="totolRow">
+                                                        <td>
+                                                            <i class="fa fa-file-excel-o excel" title="ExportAsXLSX"
+                                                                aria-hidden="true" type="button"
+                                                                (click)="exportAsXLSXDetail()">
+                                                            </i>
+                                                            <i class="far fa-file-pdf ms-4"
+                                                                style="color: #2433be;font-size: 22px;cursor: pointer;"
+                                                                (click)="PDFdetail()">
+                                                            </i>
+                                                        </td>
+                                                        <td></td>
+                                                        <td></td>
+                                                        <td></td>
+                                                        <td>{{this.DetailAmount}}</td>
+                                                        <td></td>
+                                                        <td></td>
+                                                        <td data-mdb-toggle="modal" data-mdb-target="#exampleModal"
+                                                            (click)="openModal(content)">
+                                                            {{this.DetailtotalGstAmount}}</td>
+                                                        <td></td>
+                                                    </tr>
+                                                </thead>
+                                                <tbody class="text-center">
+                                                   
+                                                </tbody>
+                                            </table>
+                                        </div>
+                                    </div>
+                                </div>
                             </mat-tab>
                         </mat-tab-group>
                     </div>
