--- a/web/src/app/inventory/purchase-return/purchase-return.component.css
+++ b/web/src/app/inventory/purchase-return/purchase-return.component.css
@@ -29,3 +29,32 @@ box-shadow: 2px 2px 5px #00000047;
     cursor: pointer;
     font-size: 19px;
   }
+
+  .deleteClass{
+    color:red !important;
+    text-decoration:line-through !important; 
+}
+.addClass{
+    color:green !important;
+}
+
+.delete_icons {
+    background: #ff0000;
+    color: #fff;
+    padding: 3px;
+    border-radius: 24px;
+    font-size: 18px;
+    height: 24px !important;
+    width: 24px !important;
+    cursor: pointer;
+    transition: 0.5s;
+    box-shadow: 2px 2px 6px #9c9795fa;
+}
+
+.mat-input-element:disabled {
+    color: rgb(0 0 0) !important;
+}
+
+.mat-select-disabled .mat-select-value {
+    color: rgb(0, 0, 0);
+}
