--- a/web/src/app/inventory/purchase-return/purchase-return.component.html
+++ b/web/src/app/inventory/purchase-return/purchase-return.component.html
@@ -14,8 +14,8 @@
                                 <div class="col-xl-2 col-lg-2 col-md-2 col-sm-2 mb-0 ">
                                     <mat-form-field class="example-full-width mb-0">
                                       <mat-label>Supplier Name</mat-label>
-                                      <mat-select name="Supplier" [(ngModel)]="xferItem.SupplierID" editable="true"
-                                        #singleSelect>
+                                      <mat-select name="Supplier" [(ngModel)]="selectedPurchaseMaster.SupplierID" editable="true"
+                                        #singleSelect required>
                                         <mat-option *ngFor="let sup of supplierList  let i = index;" [value]="sup.ID">
                                           {{sup.Name}}
                                         </mat-option>
@@ -28,13 +28,30 @@
                                   <div class="col-xl-2 col-lg-2 col-md-2 col-sm-2 mb-0 ">
                                     <mat-form-field class="example-full-width mb-0">
                                       <mat-label>Shop Name</mat-label>
-                                      <mat-select name="shopID" [(ngModel)]="xferItem.ShopID" >
+                                      <mat-select name="shopID" [(ngModel)]="selectedPurchaseMaster.ShopID" required >
                                         <mat-option [value]="s.ID" *ngFor="let s of shopList"> {{s.Name}}
                                           <span [style.color]="'blue'" *ngIf="s.AreaName !== 'null'">({{s.AreaName}})</span>
                                         </mat-option>
                                       </mat-select>
                                     </mat-form-field>
                                   </div>
+                                  <div class="col-xl-2 col-lg-4 col-md-6 col-sm-12 mb-0">
+                                    <mat-form-field class="example-full-width mb-0">
+                                        <mat-label>System CN No.</mat-label>
+                                        <input matInput name="SystemCN " [(ngModel)]="selectedPurchaseMaster.SystemCN"
+                                        required   (ngModelChange)="selectedPurchaseMaster.SystemCN = onChange($event)" autocomplete="off">
+                                    </mat-form-field>
+                                </div>
+                                <div class="col-xl-2 col-lg-4 col-md-6 col-sm-12 mb-0">
+                                    <mat-form-field class="example-full-width mb-0">
+                                        <mat-label>Supplier CN No.</mat-label>
+                                        <input matInput name="SupplierCN" [(ngModel)]="selectedPurchaseMaster.SupplierCN"
+                                          disabled  (ngModelChange)="selectedPurchaseMaster.SupplierCN = onChange($event)" autocomplete="off">
+                                    </mat-form-field>
+                                </div>
+                                <div class="col-xl-4 col-lg-2 col-md-6 col-sm-12 mb-0">
+                                 
+                                </div>
                                 <div class="col-xl-2 col-lg-2 col-md-6 col-sm-12 mb-0">
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>Search By BarCode</mat-label>
@@ -156,8 +173,8 @@
                                 <div class="col-xl-1  col-lg-1 col-md-6 col-sm-12 mb-0">
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>Retrun Quantity</mat-label>
-                                        <input matInput name="RetrunQuantity" type=number min="0"
-                                            #XferCountControl="ngModel" [(ngModel)]="xferItem.RetrunQuantity"  required>
+                                        <input matInput name="Quantity" type=number min="0"
+                                            #XferCountControl="ngModel" [(ngModel)]="xferItem.Quantity"  required>
                                         <mat-error *ngIf="XferCountControl.invalid && XferCountControl.touched">
                                             Tranfer Count is Required
                                         </mat-error>
@@ -170,29 +187,16 @@
                                             (ngModelChange)="xferItem.Remark = onChange($event)" autocomplete="off">
                                     </mat-form-field>
                                 </div>
-                                <div class="col-xl-1 col-lg-4 col-md-6 col-sm-12 mb-0">
-                                    <mat-form-field class="example-full-width mb-0">
-                                        <mat-label>System CN No.</mat-label>
-                                        <input matInput name="SystemCN " [(ngModel)]="xferItem.SystemCN"
-                                            (ngModelChange)="xferItem.SystemCN = onChange($event)" autocomplete="off">
-                                    </mat-form-field>
-                                </div>
-                                <div class="col-xl-1 col-lg-4 col-md-6 col-sm-12 mb-0">
-                                    <mat-form-field class="example-full-width mb-0">
-                                        <mat-label>Supplier CN No.</mat-label>
-                                        <input matInput name="SupplierCN" [(ngModel)]="xferItem.SupplierCN"
-                                            (ngModelChange)="xferItem.SupplierCN = onChange($event)" autocomplete="off">
-                                    </mat-form-field>
-                                </div>
+                               
                                 <div class="col-xl-1 col-lg-1 col-md-1 col-sm-1 mb-0">
                                     <button class="mr-3" mat-raised-button color="primary"
-                                        [disabled]="!this.xferItem.RetrunQuantity ">Add</button>
+                                         (click)="calculateFields()" type="submit" [disabled]="!f.valid || this.xferItem.Quantity == 0">Add</button>
                                 </div>
                             </div>
                         </form>
                         <!-- save Product Return end -->
                         <!-- list start -->
-                        <form #f2="ngForm"  >
+                        <form #f2="ngForm"  (ngSubmit)="onSumbit()">
                             <!-- Add item List start -->
                             <div class="row" >
                                 <div class="col-sm-12 p-0" style="overflow-y: auto; height: 340px;box-shadow: 1px 0px 2px 4px rgba(221, 221, 221, 0.338);">
@@ -203,16 +207,33 @@
                                                     <th>Action</th>
                                                     <th>Product</th>
                                                     <th>PurchasePrice</th>
-                                                    <th>Quantity</th>
+                                                    <th>ReturnQuantity</th>
                                                     <th>Dis%</th>
+                                                    <th>DisAmt</th>
                                                     <th>SubTotal</th>
                                                     <th>TAX%</th>
+                                                    <th>TAXAmt</th>
                                                     <th>TAXType</th>
                                                     <th>TotalAmt</th>
                                                 </tr>
                                             </thead>
                                             <tbody>
-                                               
+                                                <tr *ngFor="let data of itemList ; let i = index;">
+                                                    <td class="text-center">
+                                                        <mat-icon *ngIf="data.Status !== 0" class="delete_icons ms-1" >delete_forever</mat-icon>
+                                                    </td>
+                                                    <td class="text-center" [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }" >{{data.ProductName}}</td>
+                                                    <td class="text-center" [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }" >{{data.UnitPrice }}</td>
+                                                    <td class="text-center" [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }" >{{data.Quantity}}</td>
+                                                    <td class="text-center" [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }" >{{data.DiscountPercentage}}%</td>
+                                                    <td class="text-center" [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }" >{{data.DiscountAmount}}</td>
+                                                    <td class="text-center" [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }" >{{data.SubTotal}}</td>
+                                                    <td class="text-center" [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }" >{{data.GSTPercentage}}%</td>
+                                                    <td class="text-center" [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }" >{{data.GSTAmount}}</td>
+                                                    <td class="text-center" [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }" >{{data.GSTType}}</td>
+                                                    <td class="text-center" [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }" >{{data.TotalAmount}}</td>
+                                                  
+                                                </tr>
                                             </tbody>
                                         </table>
                                 </div>
@@ -222,7 +243,7 @@
                             <div class="row pt-3 ">
                                 <div class="col-xl-1 col-lg-1 col-md-1 col-sm-1 mb-0">
                                     <mat-form-field class="example-full-width mb-0">
-                                        <mat-label>Quantity</mat-label>
+                                        <mat-label>ReturnQuantity</mat-label>
                                         <input matInput name="Quantityt" [(ngModel)]="selectedPurchaseMaster.Quantity"
                                             disabled #Quantitytcontrol [autocomplete]="false">
                                         <mat-error>
@@ -273,7 +294,7 @@
                                     </mat-form-field>
                                 </div>
                                 <div  class="col-xl-1 col-lg-1 col-md-1 col-sm-1 mb-0 ml-auto">
-                                    <button type="submit"  mat-raised-button color="primary">Save</button>
+                                    <button type="submit" [disabled]="itemList.length === 0"  mat-raised-button color="primary">Save</button>
                                 </div>
                                 <div class="col-xl-2 col-lg-2 col-md-1 col-sm-1 mb-0 ml-auto">
                                     <button  class="mr-1 shopPdf" type="button" ><i class="fa-sharp fa-solid fa-file-pdf"></i></button>
